package br.com.urubatanpacheco.ediaristas.core.enums;

public enum TipoUsuario {
    ADMIN,
    CLIENTE,
    DIARISTA;    
}
